--- a/packages.config
+++ b/packages.config
@@ -13,6 +13,10 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Web.Optimization.pt-br" version="1.1.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Moto_1" version="5.2.7" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
