--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obter mais informações sobre como configurar seu aplicativo ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -17,7 +17,7 @@
     </pages>
   </system.web>
   <connectionStrings>
-    <add name="FEMSA" connectionString="Data Source=localhost;Initial Catalog=TesteDB;Integrated Security=True;" providerName="System.Data.SqlMoto_1" />
+    <add name="FEMSA" connectionString="Data Source=localhost; Initial Catalog=dbTest; Persist Security Info=True; Uid=sa; Password=12345" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
