--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="AspNet.ScriptManager.bootstrap" version="3.4.1" targetFramework="net46" />
@@ -14,7 +14,7 @@
   <package id="Microsoft.AspNet.Web.Optimization.pt-br" version="1.1.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.Moto_1" version="5.2.7" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net46" />
