--- a/Web.config
+++ b/Web.config
@@ -17,7 +17,7 @@
     </pages>
   </system.web>
   <connectionStrings>
-    <add name="FEMSA" connectionString="Data Source=localhost; Initial Catalog=dbTest; Persist Security Info=True; Uid=sa; Password=12345" providerName="System.Data.SqlClient" />
+    <add name="FEMSA" connectionString="Data Source=HMDB0007; Initial Catalog=dbTest; Persist Security Info=True; Uid=test.femsa; Password=p@$$w0rd" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
