Ajuste no script de criação das tabelas.

--- a/Web.config
+++ b/Web.config
@@ -17,7 +17,7 @@
     </pages>
   </system.web>
   <connectionStrings>
-    <add name="FEMSA" connectionString="Data Source=HMDB0007; Initial Catalog=dbTest; Persist Security Info=True; Uid=test.femsa; Password=p@$$w0rd" providerName="System.Data.SqlClient" />
+    <add name="FEMSA" connectionString="Data Source = den1.mssql8.gear.host;Initial Catalog = grupoaval;Uid = grupoaval;Password = Yk8Pr9q_8Zs_;MultipleActiveResultSets=true;Pooling=true;Min Pool Size=0;Max Pool Size=250;Connect Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
